<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="top_rated">Top Rated</string>
    <string name="releaseDate">Release Date :</string>
    <string name="ratings">Ratings :</string>
    <string name="popular">Popular</string>
    <string name="Title">title</string>
    <string name="watch_now">Watch Now</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="mark_as_fav">Mark as Favorite</string>
    <string name="favourites">Favourites</string>
    <string name="reviews">Reviews</string>
    <string name="no_data_available">No Data Available!</string>

    no_data_available
</resources>
