<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/popular"
        android:orderInCategory="100"
        android:title="@string/popular"
        app:showAsAction="never" />
    <item
        android:id="@+id/top_rated"
        android:orderInCategory="100"
        android:title="@string/top_rated"
        app:showAsAction="never" />
    <item
        android:id="@+id/upcoming"
        android:orderInCategory="100"
        android:title="@string/upcoming"
        app:showAsAction="never" />
    <item
        android:id="@+id/now_playing"
        android:orderInCategory="100"
        android:title="@string/now_playing"
        app:showAsAction="never" />

    <item
        android:id="@+id/favourites"
        android:orderInCategory="100"
        android:title="@string/favourites"
        app:showAsAction="never" />
</menu>
