<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.neha.p1_popularmovies.Detail.DetailFragment"
    android:weightSum="1"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.08">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Title"
                    android:id="@+id/textViewTitle"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:textSize="30dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:shadowColor="#ffffff"
                    android:textStyle="bold"
                    android:padding="2dp"
                    android:layout_weight="0.08"
                    android:layout_marginBottom="5dp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below ="@id/textViewTitle"
                    android:orientation="horizontal"
                    android:id="@+id/posterLayout"
                    android:weightSum="1"
                android:layout_weight="0.08">


                <ImageView
                        android:layout_width="150dp"
                        android:layout_height="175dp"
                        android:id="@+id/imageViewPoster" />

                    <LinearLayout
                        android:layout_width="183dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="bottom|left|right|top"
                        android:layout_weight="0.69"
                        android:layout_marginLeft="8dp">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ratings"
                            android:id="@+id/textViewRatingsKey"
                            android:layout_alignParentStart="true"
                            android:layout_margin="5dp"
                            android:textSize="20dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />


                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewRatings"
                            android:layout_alignParentStart="true"
                            android:layout_margin="5dp"
                            android:textSize="20dp"
                            android:textStyle="italic"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/releaseDate"
                            android:id="@+id/textViewDateKey"
                            android:layout_alignParentStart="true"
                            android:layout_margin="5dp"
                            android:textSize="20dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewDate"
                            android:layout_alignParentStart="true"
                            android:layout_margin="5dp"
                            android:textSize="20dp"
                            android:textColor="@color/colorPrimaryDark" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageButton
                                android:layout_width="64dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/radioButton"
                                android:background="@drawable/favourite_selector" />

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/favourites"
                                android:layout_alignParentStart="true"
                                android:layout_margin="5dp"
                                android:textSize="20dp"
                                android:textColor="@color/colorPrimaryDark" />


                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/textViewSynopis"
                    android:layout_alignParentStart="true"
                    android:textSize="15dp"
                    android:textColor="@color/colorPrimaryDark"
                android:layout_weight="0.08" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.08">

                <Button
                    android:text="@string/watch_trailer"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonTrailer"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:foreground="@color/colorPrimary" />

                <Button
                    android:text="@string/watch_now"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonNow"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.08">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reviews"
                        android:id="@+id/textReview"
                        android:layout_alignParentStart="true"
                        android:layout_margin="5dp"
                        android:textSize="20dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/reviews" />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>


